[package]
name = "redboard_expirements"
version = "0.1.0"
authors = ["willemml <willem@leit.so>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "redboard_expirements"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies]
hifive1 = { version = "0.10.0", features = ["board-redv"] }
embedded-hal = "0.2.3"
panic-halt = "0.2.0"
riscv = "0.6.0"
riscv-rt = "0.8.0"
epd-waveshare = { git = "https://github.com/Caemor/epd-waveshare", branch = "main", features = ["graphics"] }
embedded-graphics = { version = "0.7.1", features = ["nalgebra_support", "fixed_point"] }
embedded-graphics-core = { version = "0.3.2", features = ["nalgebra_support"] }
embedded-text = { version = "0.5.0-beta.1", default-features = false }
